--- a/Views/ReviewTask/_FilterCongViec.cshtml
+++ b/Views/ReviewTask/_FilterCongViec.cshtml
@@ -1,28 +1,24 @@
-﻿@model IEnumerable<QuanLyCongTacTroGiangKhoaCNTT.Models.UngTuyenTroGiang>
+﻿@model IEnumerable<QuanLyCongTacTroGiangKhoaCNTT.Models.LopHocPhan>
 @using QuanLyCongTacTroGiangKhoaCNTT.Models;
 @{
-    var models = new CongTacTroGiangKhoaCNTTEntities();
-    var lstUs = Model.ToList();
-
     int roleId = Int32.Parse(Session["user-role-id"].ToString());
-    int tkId = Int32.Parse(Session["user-id"].ToString());
-    var tk = models.TaiKhoan.Find(tkId);
+    var taikhoan = Session["TaiKhoan"] as TaiKhoan;
 
-    var dgcv = new List<UngTuyenTroGiang>();
+    var dgcv = Model.ToList();
     if (roleId == 2)
     {
-        dgcv = lstUs.Where(w => w.LopHocPhan.MaCBGD.Equals(tk.Ma)).ToList();
+        dgcv = dgcv.Where(w => w.MaCBGD.ToLower().Equals(taikhoan.Ma.ToLower())).ToList();
     }
-    else if(roleId == 3)
+    else if (roleId == 3 || roleId == 5)
     {
-        dgcv = lstUs;
+        dgcv = dgcv.Where(w => w.PhanCongTroGiang.Where(wp => wp.TrangThai == true).Count() > 0).ToList();
     }
     else if (roleId == 4)
     {
-        dgcv = lstUs.Where(w => w.LopHocPhan.PhanCongTroGiang.Where(wp => wp.ID_TaiKhoan == tk.ID).Count() > 0).ToList();
+        dgcv = dgcv.Where(w => w.PhanCongTroGiang.Where(wp => wp.ID_TaiKhoan == taikhoan.ID && wp.TrangThai == true).Count() > 0).ToList();
     }
+    int i = 0;
 }
-
 <div class="card-body mt-3" id="filterLoad">
     <div class="table-card">
         <table id="dataTableBasic" class="table table-hover" style="width:100%">
@@ -37,33 +33,34 @@
             <tbody>
                 @foreach (var item in dgcv)
                 {
-                    var idtks = item.ID_TaiKhoan;
+                    var idtks = item.PhanCongTroGiang.First().ID_TaiKhoan;
+                    i++;
                     <tr>
                         <td valign="middle">
-                            MSSV: @item.MSSV
+                            MSSV: @item.UngTuyenTroGiang.First().MSSV
                             <br />
-                            Họ & Tên: @item.HoTen
+                            Họ & Tên: @item.UngTuyenTroGiang.First().HoTen
                             <br />
-                            <span class="text-nowrap">Email: @item.Email</span>
+                            <span class="text-nowrap">Email: @item.UngTuyenTroGiang.First().Email</span>
                             <br />
-                            <span data-bs-toggle="tooltip" data-bs-html="true" title="Số ĐT: @item.SoDienThoai<br/>Ngày sinh: @(item.NgaySinh != null ? item.NgaySinh.Value.ToString("yyyy-MM-dd") : "")<br />Giới tính: @item.GioiTinh" class="badge bg-info" role="button"><i class="bi bi-info-circle me-2"></i>Thông tin thêm</span>
+                            <span data-bs-toggle="tooltip" data-bs-html="true" title="Số ĐT: @item.UngTuyenTroGiang.First().SoDienThoai<br/>Ngày sinh: @(item.UngTuyenTroGiang.First().NgaySinh != null ? item.UngTuyenTroGiang.First().NgaySinh.Value.ToString("yyyy-MM-dd") : "")<br />Giới tính: @item.UngTuyenTroGiang.First().GioiTinh" class="badge bg-info" role="button"><i class="bi bi-info-circle me-2"></i>Thông tin thêm</span>
                         </td>
                         <td valign="middle" class="text-nowrap">
-                            Mã LHP: @item.LopHocPhan.MaLHP
+                            Mã LHP: @item.MaLHP
                             <br />
-                            Tên HP: @item.LopHocPhan.TenHP
+                            Tên HP: @item.TenHP
                         </td>
                         <td valign="middle" class="text-nowrap">
-                            @item.LopHocPhan.CongViec.Count() Công việc
+                            @item.CongViec.Count() Công việc
                         </td>
                         <td valign="middle" class="text-nowrap">
-                            @if (item.LopHocPhan.PhanCongTroGiang.First().TrangThai == false)
+                            @if (item.PhanCongTroGiang.First().TrangThai == false)
                             {
-                                <a titleForm="Đánh giá công việc LHP: @item.LopHocPhan.MaLHP - @item.LopHocPhan.TenHP" id="btnDanhgia-@item.ID" name="@item.LopHocPhan.ID" data-bs-toggle="tooltip" data-bs-html="true" style="min-width: 130px !important" title="Thực hiện đánh giá công việc trợ giảng cho LHP" class="btn btn-success btn-sm text-nowrap"><i class="bi bi-bookmark-check me-2"></i>Đánh giá</a>
+                                <a titleForm="Đánh giá công việc LHP: @item.MaLHP - @item.TenHP" id="btnDanhgia-@item.ID" name="@item.ID" data-bs-toggle="tooltip" data-bs-html="true" style="min-width: 130px !important" title="Thực hiện đánh giá công việc trợ giảng cho LHP" class="btn btn-success btn-sm text-nowrap"><i class="bi bi-bookmark-check me-2"></i>Đánh giá</a>
                             }
                             else
                             {
-                                <a titleForm="Xem thông tin đánh giá công việc LHP: @item.LopHocPhan.MaLHP - @item.LopHocPhan.TenHP" id="btnDanhgia-@item.ID" name="@item.LopHocPhan.ID" data-bs-toggle="tooltip" data-bs-html="true" style="min-width: 130px !important" title="Xem thông tin & cập nhật đánh giá công việc trợ giảng cho LHP" class="btn btn-primary btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Xem đánh giá</a>
+                                <a titleForm="Xem thông tin đánh giá công việc LHP: @item.MaLHP - @item.TenHP" id="btnDanhgia-@item.ID" name="@item.ID" data-bs-toggle="tooltip" data-bs-html="true" style="min-width: 130px !important" title="Xem thông tin & cập nhật đánh giá công việc trợ giảng cho LHP" class="btn btn-primary btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Xem đánh giá</a>
                                 @*<a titleForm="Xem Đánh giá công việc LHP: @item.LopHocPhan.MaLHP - @item.LopHocPhan.TenHP" id="btnXemDanhgia-@item.ID" name="@item.LopHocPhan.ID"  data-bs-toggle="tooltip" data-bs-html="true" style="min-width: 130px !important" title="Xem thông tin đánh giá công việc trợ giảng cho LHP" class="btn btn-primary btn-sm text-nowrap"><i class="bi bi-info-circle me-2"></i>Xen đánh giá</a>*@
                             }
                         </td>
