--- a/Views/TeachingAssistant/Register.cshtml
+++ b/Views/TeachingAssistant/Register.cshtml
@@ -2,9 +2,29 @@
 @using QuanLyCongTacTroGiangKhoaCNTT.Models
 @{
     CongTacTroGiangKhoaCNTTEntities models = new CongTacTroGiangKhoaCNTTEntities();
+    var taikhoan = Session["TaiKhoan"] as TaiKhoan;
+    int roleId = Int32.Parse(Session["user-role-id"].ToString());
+
+    string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh.ToLower();
+    var userKhoa = models.Khoa.FirstOrDefault(f => f.Nganh.Where(w => w.TenNganh.Equals(userTennganh)).Count() > 0);
+    var userNganh = userKhoa.Nganh.OrderByDescending(o => o.ID).ToList();
+
     var lstHk = models.HocKy.ToList();
-    var lstNganh = models.Nganh.ToList();
     var lstKhoa = models.Khoa.ToList();
+
+    var lstForm = Model.ToList();
+
+    if (roleId == 3)
+    {
+        List<int> idNganh = new List<int>();
+        foreach (var item in userNganh.ToList())
+        {
+            idNganh.Add(item.ID);
+
+        }
+        lstForm = Model.ToList().Where(w => idNganh.Contains(w.ID_Nganh)).ToList();
+    }
+
     ViewBag.Title = "Teaching Assistant";
     Layout = Session["layout"].ToString();
     var currentDate = DateTime.Now;
@@ -49,29 +69,57 @@
         <div class="col-md-12 col-12 mb-5">
             <div class="card">
                 <div class="card-header border-bottom-0 pt-3">
-                    <div class="row">
-                        <div class="col-md-4 col-12">
-                            <label for="filter-khoa" class="form-label">Khoa</label>
-                            <select id="filter-khoa" class="form-select" data-width="100%">
-                                <option value="">Tất cả</option>
-                                @foreach (var item in lstKhoa.Where(w => w.Nganh.Count > 0).ToList())
-                                {
-                                    <option value="@item.ID">@item.TenKhoa</option>
-                                }
-                            </select>
+                    @if (roleId == 3)
+                    {
+                        <div class="row">
+                            <div class="col-md-4 col-12">
+                                <label for="filter-khoa" class="form-label">Khoa</label>
+                                <select id="filter-khoa" class="form-select" data-width="100%">
+                                    <option value="">Tất cả</option>
+                                    <option value="@userKhoa.ID">@userKhoa.TenKhoa</option>
+                                </select>
+                            </div>
+                            <div class="col-md-4 col-12">
+                                <label for="filter-nganh" class="form-label">Ngành</label>
+                                <select id="filter-nganh" class="form-select" data-width="100%">
+                                    <option value="" selected>Tất cả</option>
+                                    @foreach (var item in userKhoa.Nganh.ToList())
+                                    {
+                                        <option cuaKhoa="@item.ID_Khoa" value="@item.TenNganh">@item.TenNganh</option>
+                                    }
+                                </select>
+                            </div>
                         </div>
-                        <div class="col-md-4 col-12">
-                            <label for="filter-nganh" class="form-label">Ngành</label>
-                            <select id="filter-nganh" class="form-select" data-width="100%">
-                                <option value="" selected>Tất cả</option>
-                                @foreach (var item in lstNganh)
-                                {
-                                    <option cuaKhoa="@item.ID_Khoa">@item.TenNganh</option>
-                                }
-                                <option hidden id="opNganhNull" value="opNull">Không có ngành nào</option>
-                            </select>
+                    }
+                    else
+                    {
+                        <div class="row">
+                            <div class="col-md-4 col-12">
+                                <label for="filter-khoa" class="form-label">Khoa</label>
+                                <select id="filter-khoa" class="form-select" data-width="100%">
+                                    <option value="">Tất cả</option>
+                                    @foreach (var item in lstKhoa.Where(w => w.Nganh.Count > 0).ToList())
+                                    {
+                                        <option value="@item.ID">@item.TenKhoa</option>
+                                    }
+                                </select>
+                            </div>
+                            <div class="col-md-4 col-12">
+                                <label for="filter-nganh" class="form-label">Ngành</label>
+                                <select id="filter-nganh" class="form-select" data-width="100%">
+                                    <option value="" selected>Tất cả</option>
+                                    @foreach (var items in lstKhoa)
+                                    {
+                                        foreach (var item in items.Nganh.ToList())
+                                        {
+                                            <option cuaKhoa="@item.ID_Khoa" value="@item.TenNganh">@item.TenNganh</option>
+                                        }
+                                    }
+                                    <option hidden id="opNganhNull" value="opNull">Không có ngành nào</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
+                    }
                 </div>
                 <hr />
                 <!-- table  -->
@@ -92,7 +140,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in Model)
+                                @foreach (var item in lstForm)
                                 {
                                     i++;
                                     <tr>
@@ -180,21 +228,46 @@
                                 <span class="text-danger" id="valid-hocky"></span>
                             </div>
                         </div>
-                        <div class="col-12">
-                            <div class="mb-3">
-                                <label class="form-label" for="nganh">
-                                    Ngành <span class="text-danger">*</span>
-                                </label>
-                                <select class="form-select" id="nganh">
-                                    <option selected value="">---- Chọn ngành ----</option>
-                                    @foreach (var item in lstNganh)
-                                    {
-                                        <option value="@item.ID">@item.TenNganh</option>
-                                    }
-                                </select>
-                                <span class="text-danger" id="valid-nganh"></span>
+                        @if (roleId == 3)
+                        {
+                            <div class="col-12">
+                                <div class="mb-3">
+                                    <label class="form-label" for="nganh">
+                                        Ngành <span class="text-danger">*</span>
+                                    </label>
+                                    <select class="form-select" id="nganh">
+                                        <option selected value="">---- Chọn ngành ----</option>
+                                        @foreach (var item in userKhoa.Nganh.ToList())
+                                        {
+                                            <option value="@item.ID">@item.TenNganh</option>
+                                        }
+                                    </select>
+                                    <span class="text-danger" id="valid-nganh"></span>
+                                </div>
                             </div>
-                        </div>
+                        }
+                        else
+                        {
+                            <div class="col-12">
+                                <div class="mb-3">
+                                    <label class="form-label" for="nganh">
+                                        Ngành <span class="text-danger">*</span>
+                                    </label>
+                                    <select class="form-select" id="nganh">
+                                        <option selected value="">---- Chọn ngành ----</option>
+                                        @foreach (var items in lstKhoa)
+                                        {
+                                            foreach (var item in items.Nganh.ToList())
+                                            {
+                                                <option value="@item.ID">@item.TenNganh</option>
+                                            }
+                                        }
+                                    </select>
+                                    <span class="text-danger" id="valid-nganh"></span>
+                                </div>
+                            </div>
+                        }
+
                         <div class="col-12">
                             <div class="mb-3">
                                 <label class="form-label" for="thoigianmo">
@@ -256,10 +329,9 @@
         new DataTable('#tableFormDangKy', {
             initComplete: function () {
                 this.api()
-                    .columns("5")
+                    .columns(5)
                     .every(function () {
                         let column = this;
-
                         let select = $('#filter-nganh');
 
                         select.on('change', function () {
