--- a/Views/Users/_Filter.cshtml
+++ b/Views/Users/_Filter.cshtml
@@ -38,7 +38,7 @@
                             <td valign="middle" class="text-nowrap">@item.AspNetUsers.AspNetRoles.First().Name</td>
                             <td valign="middle">@item.QuocTich</td>
                             <td valign="middle">
-                                @if (idUs != item.ID)
+                                @if (idUs != item.ID && item.AspNetUsers.AspNetRoles.Where(w => !w.ID.Equals("5") && !w.ID.Equals("3")).Count() > 0)
                                 {
                                     <div class="form-check form-switch  mb-2">
                                         <input class="form-check-input" type="checkbox" role="switch" fullname="@item.Ma - @item.HoTen" name="@item.ID" id="trangthai-@item.ID" checked="@(item.AspNetUsers.LockoutEnabled ? false : true)">
@@ -46,15 +46,15 @@
                                 }
                             </td>
                             <td valign="middle" class="text-nowrap">
-                                @if (idUs != item.ID)
+                                @if (idUs != item.ID && item.AspNetUsers.AspNetRoles.Where(w => !w.ID.Equals("5") && !w.ID.Equals("3")).Count() > 0)
                                 {
                                     <a style="font-size: 20px" role="button" id="openSua-@item.ID" fullname="@item.Ma - @item.HoTen" name="@item.ID" class="text-success">
                                         <span data-bs-toggle="tooltip" data-bs-html="true" title="Cập nhật"><i class="bi bi-pencil-square me-2"></i></span>
                                     </a>
 
-                                    <a style="font-size: 20px" role="button" id="openXoa-@item.ID" fullname="@item.Ma - @item.HoTen" name="@item.ID" class="text-danger">
+                                    @*<a style="font-size: 20px" role="button" id="openXoa-@item.ID" fullname="@item.Ma - @item.HoTen" name="@item.ID" class="text-danger">
                                         <span data-bs-toggle="tooltip" data-bs-html="true" title="Xóa bỏ"><i class="bi bi-trash"></i></span>
-                                    </a>
+                                    </a>*@
                                 }
                             </td>
                         </tr>
